--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
   <!--  <link rel="stylesheet" href="css/styles.css?v=1.0">-->
   <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" rel="stylesheet">
-  <link rel="shortcut icon" type="image/x-icon" href="/Myicon.ico">
+  <!-- <link rel="shortcut icon" type="image/x-icon" href="/Myicon.ico"> -->
 
 </head>
 
